# pokemon-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
pokemon_mcp/: __init__.py  accuracy.py  damage.py  data.py  modifiers.py  natures.py  server.py  type_chart.py
scripts/: build_db.py
tests/: test_damage.py  test_mechanics.py  test_modifiers.py  test_validation_multihit.py
