[project]
name = "pokemon-mcp"
version = "0.1.0"
description = "正確なポケモンデータと第9世代ダメージ計算を提供するMCPサーバー(Claude Codeが検索の代わりに叩く)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.12",
    "httpx>=0.27",
]

[project.scripts]
pokemon-mcp = "pokemon_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pokemon_mcp"]
